Correct form on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -369,7 +369,6 @@ img, .place-img {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  text-align: center;
   margin: 0 auto;
 }
 
@@ -379,8 +378,8 @@ img, .place-img {
   border: none;
   border-radius: 50px;
   cursor: pointer;
-  width: 30px;
-  height: 30px;
+  min-width: 30px;
+  min-height: 30px;
 }
 
 .resource .btn svg {
@@ -586,6 +585,10 @@ img, .place-img {
     width: 100%;
   }
 
+  .tab {
+    flex-direction: column;
+  }
+
   .tab .btn-container {
     min-width: 30%;
     margin-right: 20px;
@@ -602,6 +605,14 @@ img, .place-img {
   .checklist {
     width: 100%;
   }
+
+  .resource {
+    padding: 0 16px;
+  }
+
+  .resource .btn {
+    margin-right: 0;
+  }
 }
 
 @media (max-width: 320px) {
@@ -609,5 +620,36 @@ img, .place-img {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
+  }
+
+  .tab .btn-container {
+    margin: 0;
+    display: flex;
+    flex-direction: row;
+
+  }
+
+  .tab .btn-container button {
+    width: unset;
+    margin: 10px;
+  }
+
+  .country-info {
+    padding: 0 16px;
+  }
+
+  .form-control, 
+  .checklist input {
+    width: 100%;
+    width: unset;
+    padding: 0 10px;
+  }
+
+  .checklist-form {
+    padding: 0 16px;
+  }
+
+  .checklist-item {
+    width: unset;
   }
 }
